added integration test for parsing valid csv